# NSU-oop-cpp

task3/: CMakeLists.txt  main.cpp
task3/AppState/: CMakeLists.txt
task3/AppState/include/: AppState.hpp
task3/AppState/src/: AppState.cpp
task3/Assets/Config/: config.txt  w_test.txt  w_test2.txt
task3/CommandLineParser/: CMakeLists.txt
task3/CommandLineParser/include/: CommandLineParser.hpp
task3/CommandLineParser/src/: CommandLineParser.cpp
task3/Config/: CMakeLists.txt
task3/Config/ConfigParser/: CMakeLists.txt
task3/Config/ConfigParser/include/: ConfigParser.hpp
task3/Config/ConfigParser/src/: ConfigParser.cpp
task3/Config/ConverterConfig/: CMakeLists.txt
task3/Config/ConverterConfig/include/: ConverterConfig.hpp
task3/Config/ConverterConfig/src/: ConverterConfig.cpp
task3/Config/Utils/: CMakeLists.txt
task3/Config/Utils/include/: ConverterConfigUtils.hpp
task3/Config/Utils/src/: ConverterConfigUtils.cpp
task3/Converter/: CMakeLists.txt  init_converters.hpp
task3/Converter/ConverterInfo/: ConverterInfo.cpp  ConverterInfo.hpp
task3/Converter/ConverterRegistrator/: ConverterRegistrator.cpp  ConverterRegistrator.hpp
task3/Converter/ConverterRegistry/: ConverterRegistry.cpp  ConverterRegistry.hpp
task3/Converter/Interface/: Converter.hpp
task3/Converter/Mix/: MixConverter.cpp  MixConverter.hpp
task3/Converter/Mute/: MuteConverter.cpp  MuteConverter.hpp
task3/Converter/ReverseSecond/: ReverseSecondConverter.cpp  ReverseSecondConverter.hpp
task3/Exceptions/: CMakeLists.txt
task3/Exceptions/ConfigParserException/: ConfigParserException.cpp  ConfigParserException.hpp
task3/Exceptions/RegistryException/: RegistryException.cpp  RegistryException.hpp
task3/Exceptions/ServiceException/: ServiceException.cpp  ServiceException.hpp
task3/Exceptions/WAVParserException/WAVParserReadException/: WAVParserReadException.cpp  WAVParserReadException.hpp
task3/Exceptions/WAVParserException/WAVProcessorWriteException/: WAVProcessorWriteException.cpp  WAVProcessorWriteException.hpp
task3/Exceptions/WAVWriterException/: WAVWriterException.cpp  WAVWriterException.hpp
task3/Exceptions/include/: SoundProcessorException.hpp
task3/Exceptions/src/: SoundProcessorException.cpp
task3/Factory/: CMakeLists.txt
task3/Factory/include/: Factory.hpp
task3/Factory/src/: Factory.cpp
task3/IncludeLibs/: CMakeLists.txt
task3/IncludeLibs/include/: IncludeLibs.hpp
task3/Sample/: CMakeLists.txt
task3/Sample/include/: Sample.hpp
task3/Sample/src/: Sample.cpp
task3/Services/: CMakeLists.txt
task3/Services/Interface/: Service.cpp  Service.hpp  ServiceInfo.cpp  ServiceInfo.hpp
task3/Services/MixService/: MixService.cpp  MixService.hpp
task3/Services/MuteService/: MuteService.cpp  MuteService.hpp
task3/Services/ReverseService/: ReverseService.cpp  ReverseService.hpp
task3/Services/ServiceFactory/: CMakeLists.txt
task3/Services/ServiceFactory/include/: ServiceFactory.hpp
task3/Services/ServiceFactory/src/: ServiceFactory.cpp
task3/WAV/: CMakeLists.txt
task3/WAV/WAVFileProcessor/: CMakeLists.txt
task3/WAV/WAVFileProcessor/include/: WAVFileProcessor.hpp
task3/WAV/WAVFileProcessor/src/: WAVFileProcessor.cpp
task3/WAV/WAVFileStructure/: CMakeLists.txt
task3/WAV/WAVFileStructure/include/: WAVChunk.hpp  WAVData.hpp  WAVFileStructure.hpp  WAVHeader.hpp
task3/WAV/WAVFileStructure/src/: WAVChunk.cpp  WAVHeader.cpp
task3/test/: CMakeLists.txt  test.cpp
task4/: CMakeLists.txt  main.cpp
task4/CSVParser/: CMakeLists.txt
task4/CSVParser/include/: CSVParser.hpp
task4/CSVParser/src/: CSVParser.cpp
task4/CommandLineParser/: CMakeLists.txt
task4/CommandLineParser/include/: CommandLineParser.hpp
task4/CommandLineParser/src/: CommandLineParser.cpp
task4/Constants/: CMakeLists.txt
task4/Constants/AppState/: CMakeLists.txt
task4/Constants/AppState/include/: AppState.hpp
task4/Constants/AppState/src/: AppState.cpp
task4/Data/: correct.csv  shield.csv  wrong.csv
task4/Exceptions/: CMakeLists.txt
task4/Exceptions/include/: CSVExceptions.hpp  CSVParserException.hpp
task4/Exceptions/src/: CSVExceptions.cpp  CSVParserException.cpp
task4/IncludeLibs/: CMakeLists.txt
task4/IncludeLibs/include/: IncludeLibs.hpp
task4/IncludeLibs/src/: IncludeLibs.cpp
task4/PrintTuple/: CMakeLists.txt
task4/PrintTuple/include/: PrintTuple.hpp
task4/test/: CMakeLists.txt  test.cpp
task_1/: CMakeLists.txt
task_1/biginteger/: BigInt.cpp  BigInt.h  CMakeLists.txt  ParseUtil.h
task_1/test/: CMakeLists.txt  big_int_tests.cc
task_2/: CMakeLists.txt
task_2/ASSETS/: default_input.txt
task_2/app/: CMakeLists.txt  EntryPoint.cpp
task_2/controller/: CMakeLists.txt
task_2/controller/include/: GameController.hpp  LogicController.hpp
task_2/exceptions/: CMakeLists.txt
task_2/exceptions/include/: FileException.hpp  FileExceptionsLib.hpp  FileOpenException.hpp  InputArgumentException.h  WrongFileFormatException.hpp
task_2/model/: CMakeLists.txt
task_2/model/include/: Cell.hpp  CellField.h  CommandLineArguments.hpp  GameSettings.hpp
task_2/test/: CMakeLists.txt  test.cpp
task_2/utils/: CMakeLists.txt
task_2/utils/include/: CommandLineArgumentParser.hpp  InputFileParser.hpp  Parser.hpp
task_2/view/: CMakeLists.txt
task_2/view/include/: ConsoleGameView.hpp  FileGameView.hpp  GameView.hpp
